service_front.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nginx-frontend
spec:
  ports:
  - name: nginx
    port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
