service_nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-multitool-2
  name: nginx-multitool-2
spec:
  ports:
  - name: nginx
    port: 9001
    protocol: TCP
    targetPort: 80
    nodePort: 30080
  - name: port-2
    port: 9002
    protocol: TCP
    targetPort: 1180
    nodePort: 31180
  selector:
    app: nginx-multitool
  type: NodePort
